fix default dark mode

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -623,6 +623,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-24 {
 	width: 6rem;
 }
+.w-25 {
+	width: 8rem;
+}
 .max-w-md {
 	max-width: 28rem;
 }
